--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
                             <li class="nav-item">
                                 <a class="nav-link active" href="index.html">&hearts;&hearts;&hearts;</a>
                             </li>
+                            <li class="nav-item ">
+                                <a class="nav-link active" href="#"><span onclick="hideWeather()" >Hide</span>/<span onclick="showWeather()" >Show</span><span><strong> Weather</strong></span></a>
+                            </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle btn-outline-success ms-3 me-3 active" href="#"
+                                <a class="nav-link dropdown-toggle active" href="#"
                                     id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Change Color
+                                    Change Themes
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Lightblue</a></li>
-                                    <li><a class="dropdown-item" href="#">Lightgreen</a></li>
+                                    <li><a class="dropdown-item" href="index.html">Lightblue</a></li>
+                                    <li><a class="dropdown-item" href="index.html">Lightgreen</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Red</a></li>
+                                    <li><a class="dropdown-item" href="index.html">Red</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">All Rights
+                                <a class="nav-link disabled" tabindex="-1" aria-disabled="true">All Rights
                                     Reserved &copy;JD</a>
                             </li>
                         </ul>
-                        <form class="d-flex">
-                            <button class="btn-outline-success ps-5 pe-5 h6 active" type="submit">Weather</button>
-                        </form>
                     </div>
                 </div>
             </nav>
@@ -139,13 +139,13 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid position-relative">
+            <div id="weatherWindow" class="container-fluid position-relative">
                 <div class="row justify-content-center mt-5">
                     <div class="col-12 col-md-4 col-sm-12 col-xs-12">
                         <div class="card p-4">
                             <div class="d-flex">
-                                <h6 class="flex-grow-1">Varna</h6>
-                                <h6>16:08</h6>
+                                <h6 id="currentCity" class="flex-grow-1"></h6>
+                                <h6 id='currentTime'></h6>
                             </div>
                             <div class="d-flex flex-column temp mt-5 mb-3">
                                 <h2 class="mb-0 font-weight-bold" id="heading"> 13° C </h2> <span
