--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
                             <li class="nav-item">
                                 <a class="nav-link active" href="index.html">&hearts;&hearts;&hearts;</a>
                             </li>
-                            <li class="nav-item ">
-                                <a class="nav-link active" href="#"><span onclick="hideWeather()" >Hide</span>/<span onclick="showWeather()" >Show</span><span><strong> Weather</strong></span></a>
+                            <li class="nav-item" id="weatherLi">
+                                <a class="nav-link active" href="#"><span onclick="hideWeather()">Hide</span>/<span
+                                        onclick="showWeather()">Show</span><span><strong> Weather</strong></span></a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle active" href="#"
-                                    id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Change Themes
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -148,19 +149,15 @@
                                 <h6 id='currentTime'></h6>
                             </div>
                             <div class="d-flex flex-column temp mt-5 mb-3">
-                                <h2 class="mb-0 font-weight-bold" id="heading"> 13° C </h2> <span
-                                    class="small grey">Stormy</span>
+                                <h2 class="mb-0 font-weight-bold" id="currentTemp"></h2> <span id="currentSit"
+                                    class="small grey"></span>
                             </div>
                             <div class="d-flex">
                                 <div class="temp-details flex-grow-1">
-                                    <p class="my-1"> <img src="https://i.imgur.com/B9kqOzp.png" height="17px"> <span> 40
-                                            km/h </span> </p>
-                                    <p class="my-1"> <i class="fa fa-tint mr-2" aria-hidden="true"></i> <span> 84%
-                                        </span> </p>
-                                    <p class="my-1"> <img src="https://i.imgur.com/wGSJ8C5.png" height="17px"> <span>
-                                            0.2h </span> </p>
+                                    <p class="my-1"> <img src="https://i.imgur.com/B9kqOzp.png" height="17px"> <span id="currentSpeed"></span> </p>
+                                    <p class="my-1"> <i class="fa fa-tint mr-2" aria-hidden="true"></i> <span id="currentHumidity"></span> </p>
                                 </div>
-                                <div> <img src="https://i.imgur.com/Qw7npIg.png" width="100px"> </div>
+                            <div> <img src="" width="100%" id="currentImage"></div>
                             </div>
                         </div>
                     </div>
