--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
                         <div class="col-md-12 h4 text-center"><strong>REGISTER</strong></div>
                         <div class="col-md-12">
                             <label for="inputEmail45" class="form-label">Username</label>
-                            <input type="username" class="form-control" id="inputEmail45">
+                            <input type="username" class="form-control" placeholder="Username" id="inputEmail45">
                         </div>
                         <div class="col-md-6">
                             <label for="inputEmail47" class="form-label">Full name</label>
-                            <input type="name" class="form-control" id="inputEmail47">
+                            <input type="name" class="form-control" placeholder="Full name" id="inputEmail47">
                         </div>
                         <div class="col-md-6">
                             <label for="inputPassword4" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="inputPassword4">
+                            <input type="password" class="form-control" placeholder="Password" id="inputPassword4">
                         </div>
                         <div class="col-md-12">
                             <label for="inputPassword4" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="inputPassword4">
+                            <input type="email" class="form-control" placeholder="Email" id="inputPassword4">
                         </div>
                         <div class="col-md-6">
                             <label for="inputCity" class="form-label">Countries</label>
@@ -96,8 +96,8 @@
                             </select>
                         </div>
                         <div class="col-md-2">
-                            <label for="inputZip" class="form-label">Zip</label>
-                            <input type="text" class="form-control" id="inputZip">
+                            <label for="inputZip" class="form-label">Postcode</label>
+                            <input type="text" class="form-control" placeholder="Postcode" id="inputZip">
                         </div>
                         <div class="col-12">
                             <div class="form-check">
@@ -120,11 +120,11 @@
                         <div class="col-md-12 h4 text-center"><strong>SIGN IN</strong></div>
                         <div class="col-md-6">
                             <label for="inputEmail42" class="form-label">Username</label>
-                            <input type="username" class="form-control" id="inputEmail42">
+                            <input type="username" class="form-control" placeholder="Username" id="inputEmail42">
                         </div>
                         <div class="col-md-6">
                             <label for="inputPassword4" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="inputPassword4">
+                            <input type="password" class="form-control" placeholder="Password" id="inputPassword4">
                         </div>
                         <div class="col-md-1">
                             <button type="submit" class="btn btn-danger">Submit</button>
@@ -140,8 +140,9 @@
                     </div>
                 </div>
             </div>
+
             <div id="weatherWindow" class="container-fluid position-relative">
-                <div class="row justify-content-center mt-5">
+                <div class="row justify-content-right mt-5">
                     <div class="col-12 col-md-4 col-sm-12 col-xs-12">
                         <div class="card p-4">
                             <div class="d-flex">
@@ -154,10 +155,12 @@
                             </div>
                             <div class="d-flex">
                                 <div class="temp-details flex-grow-1">
-                                    <p class="my-1"> <img src="https://i.imgur.com/B9kqOzp.png" height="17px"> <span id="currentSpeed"></span> </p>
-                                    <p class="my-1"> <i class="fa fa-tint mr-2" aria-hidden="true"></i> <span id="currentHumidity"></span> </p>
+                                    <p class="my-1"> <img src="https://i.imgur.com/B9kqOzp.png" height="17px"> <span
+                                            id="currentSpeed"></span> </p>
+                                    <p class="my-1"> <i class="fa fa-tint mr-2" aria-hidden="true"></i> <span
+                                            id="currentHumidity"></span> </p>
                                 </div>
-                            <div> <img src="" width="100%" id="currentImage"></div>
+                                <div> <img src="" width="100%" id="currentImage"></div>
                             </div>
                         </div>
                     </div>
@@ -167,86 +170,34 @@
                 <h1 id="Dogs"><img class="rounded-circle"
                         src="https://www.hainesroadanimalhospital.com/sites/default/files/styles/large/public/golden-retriever-dog-breed-info.jpg?itok=-kzTcc9h"
                         width="100" height="100" alt="..."> Dogs</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
+                <label for="inputPassword4" class="form-label">The Golden Retriever is a medium-large gun dog that was
+                    bred to retrieve shot waterfowl, such as ducks and upland game birds, during hunting and shooting
+                    parties.[3] The name "retriever" refers to the breed's ability to retrieve shot game undamaged due
+                    to their soft mouth. Golden retrievers have an instinctive love of water, and are easy to train to
+                    basic or advanced obedience standards. They are a long-coated breed, with a dense inner coat that
+                    provides them with adequate warmth in the outdoors, and an outer coat that lies flat against their
+                    bodies and repels water. Golden retrievers are well suited to residency in suburban or country
+                    environments.[4] They shed copiously, particularly at the change of seasons, and require fairly
+                    regular grooming. The Golden Retriever was originally bred in Scotland in the mid-19th
+                    century.</label>
 
                 <h1 id="Cats"><img class="rounded-circle" src="https://timesofindia.indiatimes.com/photo/67586673.cms"
                         width="100" height="100" alt="..."> Cats</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Eius, expedita. Eum, at sapiente, inventore dolorum aliquid optio, amet dolor nisi
-                    blanditiis error dignissimos. Perspiciatis ducimus alias cupiditate a suscipit
-                    explicabo.</label>
+                <label for="inputPassword4" class="form-label">he cat (Felis catus) is a domestic species of small
+                    carnivorous mammal.[1][2] It is the only domesticated species in the family Felidae and is often
+                    referred to as the domestic cat to distinguish it from the wild members of the family.[4] A cat can
+                    either be a house cat, a farm cat or a feral cat; the latter ranges freely and avoids human
+                    contact.[5] Domestic cats are valued by humans for companionship and their ability to hunt rodents.
+                    About 60 cat breeds are recognized by various cat registries.</label>
 
                 <h1 id="Fishes"><img class="rounded-circle"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOEUZXsjo_XP1lQUY27_i3-vhYq1DjnT9Tkg&usqp=CAU"
                         width="100" height="100" alt="..."> Fishes</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-
-                <h1 id="Mice">Mice</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-                <h1 id="Birds">Birds</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-                <h1 id="Horses">Horses</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-
-                <h1 id="Cows">Cows</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-
-                <h1 id="Tigers">Tigers</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-
-                <h1 id="Lions">Lions</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-                <h1 id="Snakes">Snakes</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-                <h1 id="Monkeys">Monkeys</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-
-                <h1 id="Dugs">Dugs</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-
-                <h1 id="Insects">Insects</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Delectus sequi vitae, maiores excepturi obcaecati eaque vel temporibus
-                    ipsa nesciunt nobis repellendus vero illo dolorem perspiciatis perferendis veniam magnam
-                    pariatur impedit.</label>
-
-                <h1 id="Reptiles">Reptiles</h1>
-                <label for="inputPassword4" class="form-label">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Dolor inventore pariatur odit temporibus porro, eum ea libero rerum, quibusdam omnis atque
-                    facere quam quisquam hic minus molestiae? Nam, aliquam maxime?</label>
+                <label for="inputPassword4" class="form-label">Fish are aquatic, craniate, gill-bearing animals that
+                    lack limbs with digits. They form a sister group to the tunicates, together forming the olfactores.
+                    Included in this definition are the living hagfish, lampreys, and cartilaginous and bony fish as
+                    well as various extinct related groups. Around 99% of living fish species are ray-finned fish,
+                    belonging to the class Actinopterygii, with over 95% belonging to the teleost subgrouping</label>
             </div>
         </main>
         <footer class="footer mt-5  py-3 bg-secondary">
@@ -261,5 +212,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
 
 </html>
