--- a/deleteanimal.html
+++ b/deleteanimal.html
@@ -31,10 +31,10 @@
                                         onclick="showWeather()">Show</span><span><strong> Weather</strong></span></a>
                             </li>
                             <li class="nav-item" id="weatherLi">
-                                <a class="nav-link active" href="#"><span><strong> + Add Animal </strong></span></a>
+                                <a class="nav-link active" href="addanimal.html"><span><strong> + Add Animal </strong></span></a>
                             </li>
                             <li class="nav-item" id="weatherLi">
-                                <a class="nav-link active" href="#"><span><strong> Update Animal </strong></span></a>
+                                <a class="nav-link active" href="updateanimal.html"><span><strong> Update Animal </strong></span></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
