--- a/index.html
+++ b/index.html
@@ -30,26 +30,13 @@
                                 <a class="nav-link active" href="#"><span onclick="hideWeather()">Hide</span>/<span
                                         onclick="showWeather()">Show</span><span><strong> Weather</strong></span></a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Change Themes
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="index.html">Lightblue</a></li>
-                                    <li><a class="dropdown-item" href="index.html">Lightgreen</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="index.html">Red</a></li>
-                                </ul>
-                            </li>
                             <li class="nav-item">
                                 <a class="nav-link disabled" tabindex="-1" aria-disabled="true">All Rights
                                     Reserved &copy;JD</a>
                             </li>
                         </ul>
                     </div>
+                    <a href="Home.html"><button type="button" class="btn btn-light">Log In</button></a>
                 </div>
             </nav>
         </header>
