--- a/Home.html
+++ b/Home.html
@@ -13,9 +13,9 @@
 <body class="mainb">
     <div class="wrapper">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-secondary p-3 col-12 position-fixed">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-secondary p-3 col-12 position-fixed d-inline">
                 <div class="container-fluid ">
-                    <a class="navbar-brand" href="index.html">My Rrofile</a>
+                    <a class="navbar-brand" href="Home.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -45,12 +45,12 @@
                                     Change Themes
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="index.html">Lightblue</a></li>
-                                    <li><a class="dropdown-item" href="index.html">Lightgreen</a></li>
+                                    <li><a class="dropdown-item" href="#">Lightblue</a></li>
+                                    <li><a class="dropdown-item" href="#">Lightgreen</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="index.html">Red</a></li>
+                                    <li><a class="dropdown-item" href="#">Red</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -61,37 +61,19 @@
                     </div>
                     <a href="index.html"><button type="button" class="btn btn-light">Log Out</button></a>
                 </div>
+                <div><br></div>
+                <div id="weatherWindow" class="container">
+                    <div class="d-flex text-white">
+                        <h6 id="currentCity" class="me-5"></h6>
+                        <h2 class="me-5" id="currentTemp"></h2>
+                        <h6 id='currentTime' class="me-5 w-25"></h6>
+                    </div>
+                </div>
             </nav>
         </header>
 
         <main>
             <div class="row">
-                <div id="weatherWindow" class="container-fluid position-relative">
-                    <div class="row justify-content-right mt-5">
-                        <div class="col-12 col-md-4 col-sm-12 col-xs-12">
-                            <div class="card p-4">
-                                <div class="d-flex">
-                                    <h6 id="currentCity" class="flex-grow-1"></h6>
-                                    <h6 id='currentTime'></h6>
-                                </div>
-                                <div class="d-flex flex-column temp mt-5 mb-3">
-                                    <h2 class="mb-0 font-weight-bold" id="currentTemp"></h2> <span id="currentSit"
-                                        class="small grey"></span>
-                                </div>
-                                <div class="d-flex">
-                                    <div class="temp-details flex-grow-1">
-                                        <p class="my-1"> <img src="https://i.imgur.com/B9kqOzp.png" height="17px"> <span
-                                                id="currentSpeed"></span> </p>
-                                        <p class="my-1"> <i class="fa fa-tint mr-2" aria-hidden="true"></i> <span
-                                                id="currentHumidity"></span> </p>
-                                    </div>
-                                    <div> <img src="" width="100%" id="currentImage"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="navigator">
                     <div class="staticnav h4 mt-5 position-fixed">
                     </div>
