--- a/addanimal.html
+++ b/addanimal.html
@@ -76,12 +76,95 @@
                     </div>
                 </div>
             </div>
+            
         </main>
-        <footer class="footer mt-5  py-3 bg-secondary">
-            <div class="container text-center">
-                <span class="text-light">All Rights Reserved @JD 2021</span>
+        <footer class="text-center text-lg-start bg-light text-muted">
+            <section
+              class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+              <div>
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-google"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-instagram"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </section>
+            <section class="">
+              <div class="container text-center text-md-start mt-5">
+                <div class="row mt-3">
+                  <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">
+                      <i class="fas fa-gem me-3"></i>Website Purpose
+                    </h6>
+                    <p>
+                      Help people meet their animal friends!
+                    </p>
+                  </div>
+                  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">
+                      Products
+                    </h6>
+                    <p>
+                      <a href="#!" class="text-reset">Friends</a>
+                    </p>
+                    <p>
+                      <a href="#!" class="text-reset">Food</a>
+                    </p>
+                    <p>
+                      <a href="#!" class="text-reset">Accessories</a>
+                    </p>
+                  </div>
+                  <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">
+                      Useful links
+                    </h6>
+                    <p>
+                      <a href="#!" class="text-reset">Facebook</a>
+                    </p>
+                    <p>
+                      <a href="#!" class="text-reset">Youtube</a>
+                    </p>
+                    <p>
+                      <a href="#!" class="text-reset">Animal Hope</a>
+                    </p>
+                    <p>
+                      <a href="#!" class="text-reset">Help</a>
+                    </p>
+                  </div>
+                  <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">
+                      Contact
+                    </h6>
+                    <p><i class="fas fa-home me-3"></i> Varna, Bulgaria</p>
+                    <p>
+                      <i class="fas fa-envelope me-3"></i>
+                      JD@gmail.com
+                    </p>
+                    <p><i class="fas fa-phone me-3"></i> + 359(0) 085589985</p>
+                    <p><i class="fas fa-print me-3"></i> + 359(0) 094112400</p>
+                  </div>
+                </div>
+              </div>
+            </section>
+          
+            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+              © 2021 Copyright:
+              <a class="text-reset fw-bold" href="#">JD</a>
             </div>
-        </footer>
+          </footer>
 
     </div>
 </body>
