--- a/Home.html
+++ b/Home.html
@@ -78,7 +78,7 @@
 
         <main class="row">
             <div class="inlineForms d-flex">
-                <form class="col ms-5 mt-5" action="" method="get">
+                <form class="col ms-5 mt-5 me-5" action="" method="get">
                     <br>
                     <br>
                     <br>
@@ -124,14 +124,14 @@
                         <label for="">9000</label>
                     </div>
                 </form>
-                <form class="col ms-5 mt-5" action="" method="get">
+                <form class="col ms-5 mt-5 me-5" action="" method="get">
                     <br>
                     <br>
                     <br>
                     <br>
                     <br>
                     <br>
-                    <div><strong>Favourite Friends</strong></div>
+                    <div class="border-top border-primary pt-3"><strong>Favourite Friends</strong></div>
                     <div class="animalsGroup">
                         <h1 id="Dogs"><img class="rounded-circle"
                                 src="https://www.hainesroadanimalhospital.com/sites/default/files/styles/large/public/golden-retriever-dog-breed-info.jpg?itok=-kzTcc9h"
@@ -157,14 +157,14 @@
                             lack limbs with digits.</label>
                     </div>
                 </form>
-                <form class="col ms-5 mt-5" action="" method="get">
+                <form class="col ms-5 mt-5 me-5" action="" method="get">
                     <br>
                     <br>
                     <br>
                     <br>
                     <br>
                     <br>
-                    <div><strong>My Friends</strong></div>
+                    <div class="border-top border-primary pt-3" ><strong>My Friends</strong></div>
                     <div class="animalsGroup">
                         <h1 id="Dogs"><img class="rounded-circle"
                                 src="https://www.hainesroadanimalhospital.com/sites/default/files/styles/large/public/golden-retriever-dog-breed-info.jpg?itok=-kzTcc9h"
