--- a/deleteanimal.html
+++ b/deleteanimal.html
@@ -7,6 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -80,92 +82,93 @@
 
         </main>
         <footer class="text-center text-lg-start bg-light text-muted">
-            <section
-              class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
-              <div>
-                <a href="" class="me-4 text-reset">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                  <i class="fab fa-twitter"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                  <i class="fab fa-google"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                  <i class="fab fa-instagram"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                  <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                  <i class="fab fa-github"></i>
-                </a>
-              </div>
+            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+                <div>
+                    <a href="https://www.facebook.com/" class="me-4 text-reset">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                    <a href="https://twitter.com" class="me-4 text-reset">
+                        <i class="bi bi-twitter"></i>
+                    </a>
+                    <a href="https://www.google.com/" class="me-4 text-reset">
+                        <i class="bi bi-google"></i>
+                    </a>
+                    <a href="https://www.youtube.com/" class="me-4 text-reset">
+                        <i class="bi bi-youtube"></i>
+                    </a>
+                    <a href="https://linkedin.com/" class="me-4 text-reset">
+                        <i class="bi bi-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/" class="me-4 text-reset">
+                        <i class="bi bi-github"></i>
+                    </a>
+                </div>
             </section>
             <section class="">
-              <div class="container text-center text-md-start mt-5">
-                <div class="row mt-3">
-                  <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                      <i class="fas fa-gem me-3"></i>Website Purpose
-                    </h6>
-                    <p>
-                      Help people meet their animal friends!
-                    </p>
-                  </div>
-                  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                      Products
-                    </h6>
-                    <p>
-                      <a href="#!" class="text-reset">Friends</a>
-                    </p>
-                    <p>
-                      <a href="#!" class="text-reset">Food</a>
-                    </p>
-                    <p>
-                      <a href="#!" class="text-reset">Accessories</a>
-                    </p>
-                  </div>
-                  <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                      Useful links
-                    </h6>
-                    <p>
-                      <a href="#!" class="text-reset">Facebook</a>
-                    </p>
-                    <p>
-                      <a href="#!" class="text-reset">Youtube</a>
-                    </p>
-                    <p>
-                      <a href="#!" class="text-reset">Animal Hope</a>
-                    </p>
-                    <p>
-                      <a href="#!" class="text-reset">Help</a>
-                    </p>
-                  </div>
-                  <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                      Contact
-                    </h6>
-                    <p><i class="fas fa-home me-3"></i> Varna, Bulgaria</p>
-                    <p>
-                      <i class="fas fa-envelope me-3"></i>
-                      JD@gmail.com
-                    </p>
-                    <p><i class="fas fa-phone me-3"></i> + 359(0) 085589985</p>
-                    <p><i class="fas fa-print me-3"></i> + 359(0) 094112400</p>
-                  </div>
+                <div class="container text-center text-md-start mt-5">
+                    <div class="row mt-3">
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                <i class="fas fa-gem me-3"></i>Website Purpose
+                            </h6>
+                            <p>
+                                Help people meet their animal friends!
+                            </p>
+                        </div>
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Products
+                            </h6>
+                            <p>
+                                <a href="#!" class="text-reset">Friends</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Food</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Accessories</a>
+                            </p>
+                        </div>
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Useful links
+                            </h6>
+                            <p>
+                                <a href="https://www.facebook.com/" class="text-reset"><i class="bi bi-facebook"></i>
+                                    Facebook</a>
+                            </p>
+                            <p>
+                                <a href="https://www.youtube.com/" class="text-reset"><i class="bi bi-youtube"></i>
+                                    Youtube</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Animal Hope</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Help</a>
+                            </p>
+                        </div>
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Contact
+                            </h6>
+                            <p><i class="bi bi-house-fill"></i> Varna, Bulgaria</p>
+                            <p>
+                                <i class="bi bi-envelope-fill"></i>
+                                JD@gmail.com
+                            </p>
+                            <p><i class="bi bi-telephone-forward-fill"></i> + 359(0) 085589985</p>
+                            <p><i class="bi bi-telephone-forward-fill"></i></i> + 359(0) 094112400</p>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </section>
-          
+
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-              © 2021 Copyright:
-              <a class="text-reset fw-bold" href="#">JD</a>
+                © 2021 Copyright:
+                <a class="text-reset fw-bold" href="#">JD</a>
             </div>
-          </footer>
+        </footer>
 
     </div>
 </body>
