--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                             <label for="inputPassword4" class="form-label">Email</label>
                             <input type="email" class="form-control" placeholder="Email" id="inputPassword4">
                         </div>
+                        <div class="col-md-12">
+                            <label for="inputPassword4" class="form-label">Phone Number</label>
+                            <input type="number" class="form-control" placeholder="Phone Number" id="inputPassword4">
+                        </div>
                         <div class="col-md-6">
                             <label for="inputCity" class="form-label">Countries</label>
                             <select id="inputState" class="form-select">
